configurado retrofit, coneccion con DB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,29 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.marianoroces.sireba">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config">
         <activity
-            android:name=".Activities.ViewReportActivity"
-            android:parentActivityName=".Activities.CheckReportsActivity" />
+            android:name=".activities.ViewReportActivity"
+            android:parentActivityName=".activities.CheckReportsActivity" />
         <activity
-            android:name=".Activities.CheckReportsActivity"
-            android:parentActivityName=".Activities.StartScreenActivity" />
+            android:name=".activities.CheckReportsActivity"
+            android:parentActivityName=".activities.StartScreenActivity" />
         <activity
-            android:name=".Activities.CreateReportActivity"
-            android:parentActivityName=".Activities.StartScreenActivity" />
+            android:name=".activities.CreateReportActivity"
+            android:parentActivityName=".activities.StartScreenActivity" />
         <activity
-            android:name=".Activities.StartScreenActivity"
-            android:parentActivityName=".Activities.LogInActivity" />
+            android:name=".activities.StartScreenActivity"
+            android:parentActivityName=".activities.LogInActivity" />
         <activity
-            android:name=".Activities.CreateAccountActivity"
-            android:parentActivityName=".Activities.LogInActivity" />
-        <activity android:name=".Activities.LogInActivity">
+            android:name=".activities.CreateAccountActivity"
+            android:parentActivityName=".activities.LogInActivity" />
+        <activity android:name=".activities.LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
