--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,15 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <receiver
+            android:name=".utils.MyReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service
+            android:name=".utils.MyIntentService"
+            android:exported="false" />
+
         <activity
             android:name=".activities.ReportMapActivity"
             android:parentActivityName=".activities.CreateReportActivity"
